--- a/platform/app/pluginConfig.json
+++ b/platform/app/pluginConfig.json
@@ -51,6 +51,11 @@
       "packageName": "@ohif/extension-cornerstone-dicom-rt",
       "default": false,
       "version": "3.0.0"
+    },
+    {
+      "packageName": "@ohif/extension-dicom-rtss",
+      "default": false,
+      "version": "0.0.1"
     }
   ],
   "modes": [
